exec_output.txt
Traceback (most recent call last):
  File "exec.py", line 9, in <module>
    from dataset_readers.smbop import SmbopDatasetReader
  File "/data/home/z/SmBopEsT/dataset_readers/smbop.py", line 416
    fields["entities_as_leafs"] = 
                                 ^
SyntaxError: invalid syntax
